fix recent movie params overflow

--- a/src/views/LoadMovie/styles.module.css
+++ b/src/views/LoadMovie/styles.module.css
@@ -370,6 +370,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 4px;
+  overflow: hidden;
 }
 
 .paramTag {
